--- a/ionicSlider/mApp/package.json
+++ b/ionicSlider/mApp/package.json
@@ -3,15 +3,17 @@
   "version": "1.1.1",
   "description": "materialProject: An Ionic project",
   "dependencies": {
+    "angular-hammer": "^2.2.0",
+    "bootstrap": "3.3.7",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "2.0.0",
     "gulp-webpack": "^1.5.0",
-    "bootstrap": "3.3.7",
-    "jquery": "3.1.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.1.1",
     "jquery-validation": "1.16.0",
     "jquery-validation-unobtrusive": "3.2.6",
     "npm-run-all": "^3.1.2",
